Revision history for WWW-FreeProxyListsCom

1.003   xxx
        - added Test::Perl::Critic tests

1.002   2016-02-07
        - Adopted by Steve Bertrand (STEVEB) (2016-02-04)
        - added git info to Makefile.PL
        - added .travis.yml
        - updated license, removed LICENSE file
        - added travis/coverage badges

1.001   2013-12-27
        - Fixed broken test and prereqs

0.004   2013-12-26
        - Fixed a partially broken test
        - Minor fixes to comply with the specs and Kwalitee game
        - Added autogeneration of README from POD
        - Moved author tests to xt/
        - Switched away from now deprecated Class::Data::Accessor
          to Class::Accessor::Grouped

0.003   2010-08-06
        - Fixed first element of the list being garbage

0.002   2008-03-16
        - Fixed improper prerequisites list which was missing
          Class::Data::Accessor

0.001   2008-03-15
        - First version, released on an unsuspecting world.
