@@ -1,4 +1,7 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.4007
+#!/usr/bin/perl
+use warnings;
+use strict;
+
 require 5.006;
 use ExtUtils::MakeMaker;
 WriteMakefile
