@@ -1,7 +1,11 @@
 #!/usr/bin/env perl
+use strict;
+use warnings;
 
- use Test::More;
+use Test::More;
 
-  eval { require Test::Kwalitee; Test::Kwalitee->import() };
+eval { require Test::Kwalitee; Test::Kwalitee->import() };
 
-  plan( skip_all => 'Test::Kwalitee not installed; skipping' ) if $@;
+if ($@ || ! $ENV{RELEASE_TESTING}){
+    plan( skip_all => 'Test::Kwalitee not installed; skipping' );
+}
